circt-bc260128-00000959/origin/error.log
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: fail"
         ^
<stdin>:3:10: note: see current operation: %0 = "sim.fmt.literal"() <{literal = "Error: fail"}> : () -> !sim.fstring
